--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-// index.html content placeholder
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jalal Inventory System</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>JALAL INTERNATIONAL COPIERS LIMITED</h1>
+    <h2>Inventory Management System</h2>
+  </header>
+
+  <main>
+    <input type="text" id="searchBar" placeholder="Search by model, serial, customer..." />
+    <table id="inventoryTable">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Model</th>
+          <th>Serial Number</th>
+          <th>Price</th>
+          <th>Counter</th>
+          <th>Date Added</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </main>
+
+  <footer>
+    <p>Contact details: +254768159960 / +254736913164</p>
+    <small>Developed by Joseph Kitheka Mutua (+254745543386 / josemutuak@gmail.com)</small>
+  </footer>
+
+  <script src="app.js"></script>
+</body>
+</html>
