--- a/index.html
+++ b/index.html
@@ -1,39 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jalal Inventory System</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
 <body>
-  <header>
+  <header style="text-align:center; background-color:#222; color:white; padding:10px;">
     <h1>JALAL INTERNATIONAL COPIERS LIMITED</h1>
-    <h2>Inventory Management System</h2>
+    <p>Contact: +254768159960 / +254736913164</p>
   </header>
 
-  <main>
-    <input type="text" id="searchBar" placeholder="Search by model, serial, customer..." />
-    <table id="inventoryTable">
-      <thead>
-        <tr>
-          <th>Product</th>
-          <th>Model</th>
-          <th>Serial Number</th>
-          <th>Price</th>
-          <th>Counter</th>
-          <th>Date Added</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </main>
+  <div id="loginSection" style="text-align:center; margin-top:30px;">
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email" />
+    <br /><br />
+    <input type="password" id="password" placeholder="Password" />
+    <br /><br />
+    <button onclick="login()">Login</button>
+    <p id="loginMessage" style="color:red;"></p>
+  </div>
 
-  <footer>
-    <p>Contact details: +254768159960 / +254736913164</p>
-    <small>Developed by Joseph Kitheka Mutua (+254745543386 / josemutuak@gmail.com)</small>
+  <footer style="text-align:center; font-size:10px; margin-top:50px;">
+    <hr />
+    <p>Developed by Joseph Kitheka Mutua (+254745543386 / josemutuak@gmail.com)</p>
   </footer>
 
   <script src="app.js"></script>
 </body>
-</html>
