--- a/index.html
+++ b/index.html
@@ -1,85 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jalal International Copiers Limited</title>
-  <style>
-    body {
-      font-family: Arial;
-      padding: 20px;
-      background-color: #f4f6f8;
-    }
-    h1, h3 {
-      color: #004080;
-    }
-    input, select, button {
-      padding: 8px;
-      margin: 5px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      background: white;
-    }
-    th, td {
-      padding: 8px;
-      border: 1px solid #ccc;
-      text-align: left;
-    }
-    th {
-      background-color: #dbe9f4;
-      cursor: pointer;
-    }
-    footer {
-      font-size: 12px;
-      margin-top: 30px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jalal International Copiers Limited</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>JALAL INTERNATIONAL COPIERS LIMITED</h1>
+        <footer>
+            <p>Contact details: +254768159960 / +254736913164</p>
+            <p>Developed by Joseph Kitheka Mutua (+254745543386 / josemutuak@gmail.com)</p>
+        </footer>
+    </header>
 
-  <h1>JALAL INTERNATIONAL COPIERS LIMITED</h1>
-  <p>Contact details: +254768159960 / +254736913164</p>
+    <!-- Login Form -->
+    <div id="loginForm" class="login-form">
+        <h2>Login</h2>
+        <form action="#" method="POST">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 
-  <h3>Add New Product</h3>
-  <input type="text" id="name" placeholder="Product Name" />
-  <input type="text" id="category" placeholder="Category (e.g., Kyocera)" />
-  <input type="text" id="subCategory" placeholder="Subcategory (e.g., TASKalfa series)" />
-  <input type="text" id="model" placeholder="Model" />
-  <input type="text" id="serial" placeholder="Serial Number" />
-  <input type="number" id="price" placeholder="Price" />
-  <input type="number" id="count" placeholder="Stock Count" />
-  <input type="date" id="date" placeholder="Date" />
-  <button onclick="saveProduct()">Save Product</button>
+    <!-- Dashboard -->
+    <div id="dashboard" class="dashboard" style="display: none;">
+        <h2>Welcome to the Admin Dashboard</h2>
 
-  <h3>Inventory List</h3>
-  <input type="text" id="searchInput" placeholder="Search..." onkeyup="renderProducts()" />
-  <select id="categoryFilter" onchange="renderProducts()">
-    <option value="">All Categories</option>
-  </select>
+        <!-- Product Entry Form -->
+        <div id="productEntry">
+            <h3>Product Entry</h3>
+            <form id="productForm">
+                <label for="productName">Product Name:</label>
+                <input type="text" name="productName" required>
 
-  <table id="productTable">
-    <thead>
-      <tr>
-        <th onclick="sortTable('name')">Name</th>
-        <th onclick="sortTable('category')">Category</th>
-        <th onclick="sortTable('subCategory')">Subcategory</th>
-        <th onclick="sortTable('model')">Model</th>
-        <th onclick="sortTable('serial')">Serial</th>
-        <th onclick="sortTable('price')">Price</th>
-        <th onclick="sortTable('count')">Stock</th>
-        <th onclick="sortTable('date')">Date</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+                <label for="category">Category:</label>
+                <select name="category" required>
+                    <option value="Kyocera">Kyocera</option>
+                    <option value="Bizhub">Bizhub</option>
+                    <option value="Ricoh">Ricoh</option>
+                    <option value="Toners">Toners</option>
+                    <option value="Spare Parts">Spare Parts</option>
+                </select>
 
-  <footer>
-    Developed by Joseph Kitheka Mutua (+254745543386 / josemutuak@gmail.com)
-  </footer>
+                <label for="subCategory">Sub-Category:</label>
+                <input type="text" name="subCategory" required>
 
-  <script src="app.js"></script>
+                <label for="quantity">Quantity:</label>
+                <input type="number" name="quantity" required>
+
+                <label for="price">Price:</label>
+                <input type="number" name="price" required>
+
+                <button type="submit">Add Product</button>
+            </form>
+        </div>
+
+        <!-- Inventory Table -->
+        <div id="inventory">
+            <h3>Inventory</h3>
+            <input type="text" id="searchInput" placeholder="Search products...">
+            <input type="date" id="dateFilter">
+            <table id="inventoryTable">
+                <thead>
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Category</th>
+                        <th>Sub-Category</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Date Added</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Inventory data will go here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
